--- a/README
+++ b/README
@@ -1,1 +1,18 @@
+==
 Rubitron is a simple game defending a stash.  It is made with Rubygame.
+==
+Installation credit (Kiba):
+
+To install Ruby and rubygems (if you don't already have them):
+
+sudo apt-get install ruby irb ri rubygems ruby-dev
+
+To install rubygame and its SDL dependencies:
+
+sudo apt-get install libsdl1.2-all libsdl1.2-dev libsdl-gfx1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev 
+libsdl-ttf2.0-dev
+
+You may also need to install libsdl1.2debian-pulseaudio
+
+sudo gem install rubygame --platform=ruby
+
